2006-01-13  Ville Vainio  <vivainio@gmail.com>

	* IPython/platutils*.py: platform specific utility functions,
	so far only set_term_title is implemented (change terminal
	label in windowing systems). %cd now changes the title to
	current dir.

	* IPython/Release.py: Added myself to "authors" list, 
	had to create new files.
	
	* IPython/iplib.py (handle_shell_escape): fixed logical flaw in
	shell escape; not a known bug but had potential to be one in the
	future.

	* IPython/ipapi.py (added),OInspect.py,iplib.py: "Public" 
	extension API for IPython! See the module for usage example. Fix 
	OInspect for docstring-less magic functions.
	

2006-01-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (raw_input): temporarily deactivate all
	attempts at allowing pasting of code with autoindent on.  It
	introduced bugs (reported by Prabhu) and I can't seem to find a
	robust combination which works in all cases.  Will have to revisit
	later.

	* IPython/genutils.py: remove isspace() function.  We've dropped
	2.2 compatibility, so it's OK to use the string method.

2006-01-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.__init__): fix regexp
	matching what NOT to autocall on, to include all python binary
	operators (including things like 'and', 'or', 'is' and 'in').
	Prompted by a bug report on 'foo & bar', but I realized we had
	many more potential bug cases with other operators.  The regexp is
	self.re_exclude_auto, it's fairly commented.

2006-01-12  Ville Vainio  <vivainio@gmail.com>

	* IPython/iplib.py (make_quoted_expr,handle_shell_escape): 
	Prettified and hardened string/backslash quoting with ipsystem(),
	ipalias() and ipmagic(). Now even \ characters are passed to
	%magics, !shell escapes and aliases exactly as they are in the
	ipython command line. Should improve backslash experience,
	particularly in Windows (path delimiter for some commands that 